<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.smartcrypto.neeraj.coin.fragments.AlertDialogFragment"
    android:padding="8dp">


    <TextView
        android:id="@+id/fragment_dialog_alert_idTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/coin" />

    <TextView
        android:id="@+id/fragment_dialog_alert_txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/fragment_dialog_alert_coinIv"
        android:layout_below="@+id/fragment_dialog_alert_txtTitle"
        android:layout_marginStart="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@color/windowBackground"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_dialog_alert_txtTitle"
        android:id="@+id/fragment_dialog_alert_coinBtn"
        android:padding="8dp"
        android:layout_toEndOf="@id/fragment_dialog_alert_coinIv"
        android:layout_alignBottom="@+id/fragment_dialog_alert_coinIv"
        android:layout_alignTop="@+id/fragment_dialog_alert_coinIv"
        android:layout_alignParentRight="true"
        android:text="@string/buttonTxt_click_to_select_coin"
        android:background="@color/windowBackground"
        />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/fragment_dialog_alert_exIv"
        android:layout_below="@+id/fragment_dialog_alert_coinIv"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@color/windowBackground"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/fragment_dialog_alert_exBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_toEndOf="@+id/fragment_dialog_alert_exIv"
        android:layout_alignBottom="@+id/fragment_dialog_alert_exIv"
        android:layout_alignTop="@+id/fragment_dialog_alert_exIv"
        android:layout_alignEnd="@+id/fragment_dialog_alert_coinBtn"
        android:visibility="invisible"
        android:background="@color/windowBackground"
        android:text="@string/buttonTxt_click_to_select_exchange"
        />


    <TextView
        android:id="@+id/fragment_dialog_alert_currentPriceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_dialog_alert_exBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/fragment_dialog_alert_goesAboveTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_below="@id/fragment_dialog_alert_currentPriceTxt"
        android:layout_marginTop="10dp"
        android:text="@string/goes_above"/>

    <EditText
        android:id="@+id/fragment_dialog_alert_abovePriceEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:inputType="number"
        android:digits="0123456789."
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_below="@id/fragment_dialog_alert_goesAboveTxt" />

    <TextView
        android:id="@+id/fragment_dialog_alert_goesBelowTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_below="@id/fragment_dialog_alert_abovePriceEdtTxt"
        android:layout_marginTop="10dp"
        android:text="@string/goes_below" />

    <EditText
        android:id="@+id/fragment_dialog_alert_goesBelowEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:inputType="number"
        android:digits="0123456789."
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_below="@id/fragment_dialog_alert_goesBelowTxt"/>

    <TextView
        android:id="@+id/fragment_dialog_alert_alertMeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:text="@string/alert_me"
        android:layout_below="@id/fragment_dialog_alert_goesBelowEdtTxt"
        android:layout_marginTop="10dp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_dialog_alert_oneTimeRadioGrp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/fragment_dialog_alert_alertMeTxt"
        android:orientation="horizontal"
        android:checkedButton="@id/fragment_dialog_alert_oneTimeRadioBtn">
        <RadioButton android:id="@+id/fragment_dialog_alert_oneTimeRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time"/>

        <RadioButton
            android:id="@+id/fragment_dialog_alert_contRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuously" />
    </RadioGroup>

    <Button
        android:id="@+id/fragment_dialog_alert_delAlertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_marginRight="8dp"
        android:padding="4dp"
        android:text="@string/delete"
        android:background="@color/red"
        android:drawableLeft="@android:drawable/ic_menu_delete"/>

    <Button
        android:id="@+id/fragment_dialog_alert_saveAlertBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/fragment_dialog_alert_delAlertBtn"
        android:layout_alignTop="@+id/fragment_dialog_alert_delAlertBtn"
        android:layout_alignBottom="@+id/fragment_dialog_alert_delAlertBtn"
        android:visibility="invisible"
        android:text="@string/save"
        android:background="@color/blue"
        />

</RelativeLayout>


    <!--android:drawableStart="@drawable/btc"-->
